Java features should be preferred to Guava
Fix code-smell reported by sonnarcloud:
https://rules.sonarsource.com/java/RSPEC-4738

Signed-off-by: Peter Suna <peter.suna@pantheon.tech>